--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
           Frontend Mentor
         </a>
-        . Coded by <a href="#">Rafiw Idrissu</a>.
+        . Coded by <a href="https://github.com/dev-rafiu">Rafiw Idrissu</a>.
       </div>
     </div>
   </body>
